# moxie-exercise

./: Dockerfile  README.md  Taskfile.yml  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
db/: sample_data.sql  schema.sql
routers/: appointments.py  services.py
tests/: conftest.py  test_appointments_router.py  test_services_router.py
