[project]
name = "moxie-exercise"
version = "0.1.0"
description = "Moxie Appoinment Booking System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "peewee>=3.18.2",
    "psycopg2>=2.9.10",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
env = [
    "DATABASE_NAME=moxietestdb"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
